--- a/lib/intl/l10n/intl_es.arb
+++ b/lib/intl/l10n/intl_es.arb
@@ -8,9 +8,11 @@
   "sendEmail": "Correo enviado",
   "accept": "Aceptar",
   "success": "Éxito",
-  "inputEmail": "Correo",  "inputEmailError": "Correo error",
+  "inputEmail": "Correo",
+  "inputEmailError": "Correo error",
   "inputPassword": "Contraseña",
-  "login": "Ingresar",  "error": "Error",
+  "login": "Ingresar",
+  "error": "Error",
   "notPermission": "No tiene permisos",
   "recover": "Recuperar",
   "forgotPassword": "Has olvidado tu cotraseña",
@@ -25,12 +27,16 @@
   "descrError": "Descripción error",
   "dateCreate": "Fecha de creación",
   "employe": "Empleado",
-  "employeError": "Empleado error",  "priority": "Prioridad",
+  "employeError": "Empleado error",
+  "priority": "Prioridad",
   "priorityError": "Prioridad error",
   "save": "Guardar",
   "pickImage": "Elegir imagen",
   "supervisor": "Supervisor",
   "solution": "Solución",
   "dateSolution": "Fecha de solución",
-  "changeLanguage": "Cambiar de lenguaje"
+  "changeLanguage": "Cambiar de lenguaje",
+  "user": "Usuario",
+  "typeUser": "Tipo de usuario",
+  "area": "Área"
 }
