change keys appPreferences and README.md

--- a/lib/intl/l10n/intl_en.arb
+++ b/lib/intl/l10n/intl_en.arb
@@ -40,5 +40,6 @@
   "user": "User",
   "typeUser": "Type user",
   "area": "Area",
-  "update": "Update"
+  "update": "Update",
+  "haveAccount": "Have account"
 }
