--- a/lib/intl/l10n/intl_es.arb
+++ b/lib/intl/l10n/intl_es.arb
@@ -40,5 +40,6 @@
   "user": "Usuario",
   "typeUser": "Tipo de usuario",
   "area": "Área",
-  "update": "Actualizar"
+  "update": "Actualizar",
+  "haveAccount": "Tengo una cuenta"
 }
